--- a/src/app/features/components/rounded-button/rounded-button.component.scss
+++ b/src/app/features/components/rounded-button/rounded-button.component.scss
@@ -1,8 +1,17 @@
-@import "../../../../styles";
+@import "../../../../styles/variables";
 
-a {
-  border: 1px solid $border-color;
+.btn {
+  display: flex;
+  width: 237px;
+  align-items: center;
+  justify-content: center;
   border-radius: $border-radius;
+  border: 1px solid $border-color;
+  padding: 19px 0;
+  font-family: "Anonymous Pro";
   font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%; /* 19.2px */
   text-transform: uppercase;
 }
