--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,12 +1,5 @@
-/* Variables */
-// Colors
-$background-color: #090909;
-$font-color: #F5F5F5;
-$border-color: #F5F5F5;
-
-// Radius
-$border-radius: 60px;
-
+@import "variables";
+@import "reset";
 /* Global */
 body {
   background-color: $background-color;
