--- a/src/app/features/components/footer/footer.component.html
+++ b/src/app/features/components/footer/footer.component.html
@@ -1,1 +1,11 @@
-<p>footer works!</p>
+<a href="mailto:loic.aviez@proton.me">loic.aviez&#64;proton.me</a>
+<div>
+  <ul>
+    <li><a href="">Mes projets</a></li>
+    <li><a href="">A propos</a></li>
+  </ul>
+  <ul>
+    <li><a href="">Linkedin</a></li>
+    <li><a href="">Github</a></li>
+  </ul>
+</div>
