Ajoute des polices personnalisées et met à jour les styles
Intègre les polices "Humane" et "Anonymous Pro" dans les styles avec la déclaration @font-face. Définit des variables SCSS pour les polices et applique les changements aux titres et textes dans les styles globaux. Ajoute également la désactivation des analytics dans angular.json.

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,5 +4,9 @@ $background-color: #090909;
 $font-color: #F5F5F5;
 $border-color: #F5F5F5;
 
+// Fonts
+$title-font: 'Humane', sans-serif;
+$text-font: 'Anonymous Pro', monospace;
+
 // Radius
 $border-radius: 60px;
