Met à jour les dépendances et ajuste les styles SCSS
Remplace les guillemets simples par des doubles dans les fichiers SCSS pour harmoniser les styles. Supprime la configuration de Biome en faveur de nouvelles dépendances ESLint et Prettier. Met à jour plusieurs bibliothèques de développement dans le fichier package-lock.json.

--- a/src/app/features/components/footer/footer.component.html
+++ b/src/app/features/components/footer/footer.component.html
@@ -1,11 +1,15 @@
-<a href="mailto:loic.aviez@proton.me">loic.aviez&#64;proton.me</a>
-<div>
-  <ul>
-    <li><a href="">Mes projets</a></li>
-    <li><a href="">A propos</a></li>
-  </ul>
-  <ul>
-    <li><a href="">Linkedin</a></li>
-    <li><a href="">Github</a></li>
-  </ul>
-</div>
+<footer>
+  <a class="mail" href="mailto:loic.aviez@proton.me"
+    >loic.aviez&#64;proton.me</a
+  >
+  <div class="list-wrapper">
+    <ul class="list">
+      <li><a href="">Mes projets</a></li>
+      <li><a href="">A propos</a></li>
+    </ul>
+    <ul>
+      <li><a href="">Linkedin</a></li>
+      <li><a href="">Github</a></li>
+    </ul>
+  </div>
+</footer>
