--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -1,2 +1,19 @@
-<p>about-page works!</p>
+<main>
+  <div>
+  <h1>Je sculpte le virtuel pour en faire une réalité fonctionnelle.</h1>
+    <div>
+  <p>
+    Mon aventure en tant que développeur a débuté par des projets ludiques où je
+    m'amusais à créer de petits jeux en langage de programmation. Ces premiers
+    pas, marqués par une curiosité insatiable et un esprit créatif, m'ont permis
+    de découvrir l'univers du code de manière intuitive et divertissante. Chaque
+    projet était une occasion d'apprendre quelque chose de nouveau,
+    d'expérimenter et de repousser mes limites techniques, tout en conservant
+    cet aspect récréatif qui rendait l'apprentissage tellement plus stimulant.
+    C'est à travers ces expériences que ma passion pour le développement s'est
+    affirmée et solidifiée.
+  </p>
+    </div>
+  </div>
+</main>
 <app-footer></app-footer>
