--- a/src/app/pages/not-found-page/not-found-page.component.html
+++ b/src/app/pages/not-found-page/not-found-page.component.html
@@ -4,6 +4,9 @@
       <h1>404</h1>
       <p>La page que vous recherchez n'existe pas</p>
     </div>
-    <app-rounded-button [label]="'Retour à l\'accueil'" routerLink="/"></app-rounded-button>
+    <app-rounded-button
+      [label]="'Retour à l\'accueil'"
+      routerLink="/"
+    ></app-rounded-button>
   </div>
 </div>
