--- a/src/styles/_typo.scss
+++ b/src/styles/_typo.scss
@@ -1,20 +1,20 @@
 @font-face {
-  font-family: 'Humane';
+  font-family: "Humane";
   font-style: normal;
   font-weight: 700;
-  src: url('../assets/fonts/Humane-Bold.woff2') format('woff2'),
+  src: url("../assets/fonts/Humane-Bold.woff2") format("woff2");
 }
 
 @font-face {
-  font-family: 'Anonymous Pro';
+  font-family: "Anonymous Pro";
   font-style: normal;
   font-weight: 400;
-  src: url('../assets/fonts/AnonymousPro-Regular.ttf') format('truetype'),
+  src: url("../assets/fonts/AnonymousPro-Regular.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Anonymous Pro';
+  font-family: "Anonymous Pro";
   font-style: normal;
   font-weight: 700;
-  src: url('../assets/fonts/AnonymousPro-Bold.ttf') format('truetype');
+  src: url("../assets/fonts/AnonymousPro-Bold.ttf") format("truetype");
 }
