--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,12 +1,12 @@
 /* Variables */
 // Colors
 $background-color: #090909;
-$font-color: #F5F5F5;
-$border-color: #F5F5F5;
+$font-color: #f5f5f5;
+$border-color: #f5f5f5;
 
 // Fonts
-$title-font: 'Humane', sans-serif;
-$text-font: 'Anonymous Pro', monospace;
+$title-font: "Humane", sans-serif;
+$text-font: "Anonymous Pro", monospace;
 
 // Radius
 $border-radius: 60px;
