Ajoute GSAP et améliore la structure de la page "About"
Ajout des dépendances GSAP et @types/gsap pour préparer l'utilisation d'animations. Mise à jour du style et de la structure HTML de la page "About" avec de nouvelles classes et conteneurs. Correction mineure dans le fichier du footer pour les styles.

--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -1,7 +1,7 @@
 <main>
-  <div>
+  <div class="container-20">
   <h1>Je sculpte le virtuel pour en faire une réalité fonctionnelle.</h1>
-    <div>
+    <div class="container-10">
   <p>
     Mon aventure en tant que développeur a débuté par des projets ludiques où je
     m'amusais à créer de petits jeux en langage de programmation. Ces premiers
@@ -13,6 +13,10 @@
     C'est à travers ces expériences que ma passion pour le développement s'est
     affirmée et solidifiée.
   </p>
+
+      <p>
+        Au fil du temps, ces petits projets se sont transformés en défis plus complexes, où j'ai commencé à explorer différentes technologies et frameworks. Ma soif d'apprendre m'a poussé à plonger dans des domaines variés, du développement web à l'UX/UI, en passant par le front-end et le back-end. Chaque nouvelle compétence acquise me permettait de mieux comprendre l'ensemble de l'écosystème du développement et d'affiner ma vision des projets. Ce qui n'était au départ qu'une simple distraction est devenu une véritable vocation, me poussant à constamment évoluer et à repousser mes propres limites.
+      </p>
     </div>
   </div>
 </main>
