--- a/src/app/pages/about-page/about-page.component.scss
+++ b/src/app/pages/about-page/about-page.component.scss
@@ -2,8 +2,11 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   min-height: 100vh;
-
+  margin-top: 77.5px;
+  padding-left: 30px;
+  padding-right: 30px;
   h1 {
     font-size: 80px;
     font-style: normal;
@@ -11,4 +14,16 @@ main {
     line-height: 80px; /* 100% */
     text-transform: uppercase;
   }
+}
+
+.container-20 {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.container-10 {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
