--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -2,7 +2,7 @@
 // TYPOGRAPHY STYLES
 // =============================================================================
 
-@use '_variables' as *;
+@use './variables' as *;
 
 // Base typography
 html {
@@ -23,7 +23,7 @@ body {
 
 /* Text 20 upper bold */
 .text-20-upper-bold {
-  font-family: "Anonymous Pro";
+  font-family: "Anonymous Pro", monospace;
   font-size: 20px;
   font-style: normal;
   font-weight: 700;
@@ -33,7 +33,7 @@ body {
 
 /* Text 16 upper regular */
 .text-16-upper-regular {
-  font-family: "Anonymous Pro";
+  font-family: "Anonymous Pro", monospace;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -43,7 +43,7 @@ body {
 
 /* Text 16 regular */
 .text-16-regular {
-  font-family: "Anonymous Pro";
+  font-family: "Anonymous Pro", monospace;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -56,7 +56,7 @@ body {
 
 /* Title 238 */
 .title-238 {
-  font-family: Humane;
+  font-family: "Humane", sans-serif;
   font-size: 238px;
   font-style: normal;
   font-weight: 700;
@@ -66,7 +66,7 @@ body {
 
 /* Title 182 */
 .title-182 {
-  font-family: Humane;
+  font-family: "Humane", sans-serif;
   font-size: 182px;
   font-style: normal;
   font-weight: 700;
@@ -76,7 +76,7 @@ body {
 
 /* Title 106 */
 .title-106 {
-  font-family: Humane;
+  font-family: "Humane", sans-serif;
   font-size: 106px;
   font-style: normal;
   font-weight: 700;
@@ -86,7 +86,7 @@ body {
 
 /* Title 81 */
 .title-81 {
-  font-family: Humane;
+  font-family: "Humane", sans-serif;
   font-size: 81px;
   font-style: normal;
   font-weight: 700;
@@ -96,7 +96,7 @@ body {
 
 /* Title 62 */
 .title-62 {
-  font-family: Humane;
+  font-family: "Humane", sans-serif;
   font-size: 62px;
   font-style: normal;
   font-weight: 700;
